--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,39 +1,56 @@
+body {
+  margin: 0; /* Remove default body margin */
+}
+
 .navbar {
-    display: flex;
-    justify-content: flex-start;
-    gap: 300px;
-    align-items: center;
-    background: white;
-    padding: 1em;
-    color: white;
-  }
-  
-  .logo img {
-    height: 70px; 
-  }
-  
-  .search-bar {
-    display: flex;
-    align-items: center;
-    margin:10px;
-  }
-  
-  .search-bar input {
-    padding: .5em;
-    margin-right: .7em;
-    width:fit-content;
-  }
-  
-  .menu button {
-    background-color: #2a5b9b; 
-    color: white;
-    border: none;
-    padding: .5em;
-    margin-left: .5em;
-  }
-  
-  .menu {
-    display: flex;
-    flex-direction: row; /* Display buttons in a column layout */
-    gap: 10px;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: white;
+  padding: 1em;
+  color: white;
+  width: 100%;
+}
+
+.Right {
+  width: 70%; /* Adjust the width as needed */
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center items horizontally */
+  margin-bottom: 20px; /* Add empty space underneath .navbar */
+}
+
+.top-nav {
+  display: flex;
+  align-items: center;
+}
+
+.logo img {
+  height: 70px;
+}
+
+.search-bar {
+  display: flex;
+  flex-direction: column; /* Align items in a column layout */
+  align-items: center; /* Center items horizontally */
+  margin: 10px;
+}
+
+.search-bar input {
+  padding: .5em;
+  margin-bottom: .7em;
+}
+
+.menu button {
+  background-color: #2a5b9b;
+  color: white;
+  border: none;
+  padding: .5em;
+  margin-top: .5em;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column; /* Align buttons in a column layout */
+  gap: 10px;
+}
