--- a/src/components/ProjectExtension.css
+++ b/src/components/ProjectExtension.css
@@ -168,6 +168,7 @@ thead tr:nth-child(2) td {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    cursor: pointer;
 }
 
 .file2-btn{
