--- a/src/components/paywall.css
+++ b/src/components/paywall.css
@@ -2,8 +2,9 @@
     min-width: 200%;
     display: flex;
     flex-direction: row;
-    overflow: scroll;
+    overflow:auto ;
     height: 50vh;
+    height: min-content;
 }
 #warning{
     text-align: center;
