--- a/src/components/paywall.css
+++ b/src/components/paywall.css
@@ -1,11 +1,11 @@
 .sub-container{
-    min-width: 200%;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    overflow:auto ;
-    height: 50vh;
-    height: min-content;
+    /* overflow: scroll;
+    height: 50vh; */
 }
+
 #warning{
     text-align: center;
     background-color: rgb(255, 138, 138);
@@ -19,7 +19,7 @@
 }
 
 .payment-details{
-    width: 20%;;
+    width: 40%;;
     padding: 5px;
 
 }
@@ -47,7 +47,7 @@
 
 .notice{
     text-align: left;
-    width: 20%;
+    width: 60%;
 }
 
 
@@ -63,6 +63,16 @@
     margin-right: 10px;
 }
 
-ul li:before {
+/* ul li:before {
     content: '✓'; 
+    
+} */
+ul{
+    list-style: none;
+}
+li{
+    list-style: none;
+}
+.tac{
+    margin-top: 20px;
 }
